@@ -1377,6 +1377,15 @@ $wgMessageStructure = array(
 		'special-categories-sort-count',
 		'special-categories-sort-abc',
 	),
+	'linksearch' => array(
+		'linksearch',
+		'linksearch-pat',
+		'linksearch-ns',
+		'linksearch-ok',
+		'linksearch-text',
+		'linksearch-line',
+		'linksearch-error',
+	),
 	'listusers' => array(
 		'listusersfrom',
 		'listusers-submit',
@@ -2805,6 +2814,7 @@ XHTML id names.",
 	'logpages'            => 'Special:Log',
 	'allpages'            => 'Special:AllPages',
 	'categories'          => 'Special:Categories',
+	'linksearch'          => 'Special:LinkSearch',
 	'listusers'           => 'Special:ListUsers',
 	'newuserlog'          => 'Special:Log/newusers',
 	'listgrouprights'     => 'Special:ListGroupRights',
